docs: add agent/contributor conventions, variant status, reconcile perf claims
- CLAUDE.md: repo-level definition-of-done for agents/contributors (invariants,
  single-source-of-truth map, add-a-variant and perf-claim checklists, methodology creed).
- VARIANTS.md: single status table for every forest representation (family +
  production/reference/experimental/regression + rationale); regressions marked do-not-select.
- README: drop the contradicted 'InterleavedBfs is fastest / 3-4x' superlatives, mark the perf
  section historical and point to PERFORMANCE-LESSONS.md as the source of truth, add a doc map.
- DEVELOPMENT: add a Benchmarking section (two harnesses, ratios-on-same-JVM, GraalVM is deployment).
- LegacyFlatBinaryForest: Javadoc banner clarifying it is the faithful default, not deprecated.